--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "message-template",
   "version": "0.1.0",
+  "homepage": "https://voro-na.github.io/message-template",
   "private": true,
   "dependencies": {
     "@testing-library/user-event": "^13.5.0",
@@ -23,6 +24,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "eject": "react-scripts eject",
@@ -58,6 +61,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "gh-pages": "^5.0.0",
     "jest": "^27.5.1",
     "stylelint": "^15.10.2",
     "stylelint-config-standard-scss": "^10.0.0"
