--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "message-template",
   "version": "0.1.0",
-  "homepage": "https://voro-na.github.io/message-template/",
   "private": true,
   "dependencies": {
     "@testing-library/user-event": "^13.5.0",
@@ -10,6 +9,7 @@
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
     "@types/react-router-dom": "^5.3.3",
+    "jest-environment-jsdom": "^29.6.1",
     "mobx": "^6.9.1",
     "mobx-react": "^9.0.0",
     "react": "^18.2.0",
@@ -62,7 +62,7 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "gh-pages": "^5.0.0",
-    "jest": "^27.5.1",
+    "jest": "^29.5.1",
     "stylelint": "^15.10.2",
     "stylelint-config-standard-scss": "^10.0.0"
   }
